core/testData/annotator/perl/unreachableCode/returnConfessIf.code
sub throw {
    <error descr="Unreachable code">return Carp::confess(@_)</error>
        if $self->_confess;
    <error descr="Unreachable code">return Carp::croak(@_)</error>;
}
